# python-api-template

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  cookiecutter.json  mypy.ini  pyproject.toml
.github/workflows/: pythonpackage.yml
python_api_template/: controller.py
tests/: conftest.py  test_python_api_template.py
{{ cookiecutter.project_slug }}/: .dockerignore  Dockerfile  Makefile  README.md  app.py  mypy.ini  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: pythonpackage.yml
{{ cookiecutter.project_slug }}/config/: gunicorn.py
{{ cookiecutter.project_slug }}/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
{{ cookiecutter.project_slug }}/k8s/overlays/local/: kustomization.yaml
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_api.py  test_python_api_template.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: controller.py
