[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["mana-ysh <int.toshi13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.2"
janome = "^0.3.10"
dacite = "^1.5.0"
gunicorn = "^20.0.4"
pyyaml = "^5.3.1"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.770"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
